changed login page ui

--- a/ALLProject/inventory/static/inventory/product_list.css
+++ b/ALLProject/inventory/static/inventory/product_list.css
@@ -350,6 +350,7 @@ a.fill-div {
   margin-bottom: 20px;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 }
 
 .product-form form{
