--- a/ALLProject/reports/templates/reports/best_selling.html
+++ b/ALLProject/reports/templates/reports/best_selling.html
@@ -13,7 +13,7 @@
         </div>
     </head>
     <body>
-        <div id="return">
+        <div id="return" onclick="window.history.back()">
             <a href="{% url 'report' %}" id="close-box"><img src="{% static 'images/back-arrow.png' %}" alt="back-arrow" id="close"></a>
         </div>
         <div id="main-content">
