--- a/ALLProject/pos/static/css/payment_details.css
+++ b/ALLProject/pos/static/css/payment_details.css
@@ -26,6 +26,38 @@ h5 {
     font-style: normal;
 }
 
+#return {
+    position: absolute;
+    top: 15vh;
+    width: 4%;
+    background-color: #9eb7a0;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    box-shadow: 0px 4px 4px -2px #5a6a5c;
+    cursor: pointer;
+}
+
+#close-box {
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-right: 10%;
+    float: right;
+    
+    filter: brightness(1) invert(1);
+    background: transparent;
+    border-style: none;
+}
+#close {
+    width: 2vw;
+    height: 2vw;
+}
+#return:hover {
+    width: 6%;
+    #close-box {
+        margin-right: 15%;
+    }
+}
+
 #main-content {
     position: relative;
     left: 10%;
@@ -324,28 +356,6 @@ button.filter-payment:hover {
     top: 15vh;
     width: 100%;
     height: 85%;
-}
-
-#close {
-    width: 4vh;
-    height: 4vh;
-    padding: 0;
-}
-
-#close-box {
-    width: 6vh;
-    height: 6vh;
-    margin-top: 1%;
-    margin-left: 1%;
-    margin-right: 1%;
-
-    background-color: transparent;
-    border-style: none;
-    border-radius: 10px;
-}
-
-#close-box:hover {
-    background-color: #D9D9D9;
 }
 
 .container {
