--- a/ALLProject/static/css/password.css
+++ b/ALLProject/static/css/password.css
@@ -12,35 +12,65 @@
         background-image: url(../images/warehouse-1.jpg);
     }
 
-    #form-container {
+    .box, #form-container {
         position: absolute;
         place-self: anchor-center;
-        width: 75%;
+        width: 70%;
         height: 70%;
         display: flex;
-        background-color: white;
+        background-image: linear-gradient(#523249, #815355);
         border-radius: 30px;
         overflow: hidden;
     }
 
-    #form-left {
-        width: 56%;
+    #form-container {
+        width: 100%;
         height: 100%;
-        aspect-ratio: 1/3;
     }
 
+    #form-left {
+        width: 45%;
+        height: 90%;
+        align-content: center;
+        justify-items: anchor-center;
+        
+        margin-left: 2.5%;
+        margin-top: 2.5%;
+        background-color: white;
+        border-radius: 20px;
+    }
     #form-right {
-        display: inherit;
-        width: 44%;
-        aspect-ratio: 2/3;
-        flex-shrink: 0;
-        background-image: url(../images/warehouse-2.jpg);
-        background-position-y: center;
+        display: block;
+        width: 55%;
+    }
+
+    #logo-box {
+        width: 12vw;
+        height: 12vw;
+
+        margin-top: 15%;
+        background-color: #FFFFFF66;
+
+        border-radius: 50%;
+        align-content: center;
+        justify-self: center;
+        text-align: center;
+    }
+
+    #warehub-logo {
+        width: 8vw;
+        margin-top: 5%;
+        margin-left: 8%;
+    }
+    #welcome {
+        margin-top: 10%;
+        color: white;
+        text-align: center;
     }
 
     #loginForm {
         margin: auto;
-        padding: 10%;
+        padding: 1%;
         text-align: center;
     }
 
@@ -53,23 +83,61 @@
         font-weight: 400;
         line-height: normal;
     }
-    
+    a {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 12px;
+        border-radius: 10px;
+        border-style: none;
+    }
+
+    input {
+        width: 19em;
+        height: 3em;
+        margin-left: 5%;
+        padding-left: 5%;
+        border-radius: 10px;
+    }
+
     #submit-Bttn {
-        width: 15em;
+        width: 20em;
         height: 3em;
         flex-shrink: 0;
+
+        margin-top: 4%;
+        padding: 0;
         text-align: center;
         color: white;
+        background: #815355;
+
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 16px;
-        border-radius: 50px;
+        border-radius: 10px;
         border-style: none;
-        background: #815355;
     }
 
     #submit-Bttn:hover {
         background: #603d3f;
-        cursor: pointer;
+    }
+
+    #extra {
+        display: flex;
+        width: 18em;
+        margin-top: 1%;
+        justify-content: space-between
+    }
+
+    #contact {
+        padding: 2.5%;
+        background-color: #523249;
+        color: white;
+
+        border-radius: 10px;
+        border: none;
+
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 12px;
+        border-radius: 10px;
+        border-style: none;
     }
 
     #messages-container {
