--- a/ALLProject/static/css/password.css
+++ b/ALLProject/static/css/password.css
@@ -91,16 +91,16 @@
     }
 
     input {
-        width: 19em;
-        height: 3em;
+        width: 17vw;
+        height: 6vh;
         margin-left: 5%;
         padding-left: 5%;
         border-radius: 10px;
     }
 
     #submit-Bttn {
-        width: 20em;
-        height: 3em;
+        width: 21vw;
+        height: 6vh;
         flex-shrink: 0;
 
         margin-top: 4%;
