--- a/ALLProject/pos/templates/pos/sales_page.html
+++ b/ALLProject/pos/templates/pos/sales_page.html
@@ -47,56 +47,56 @@
                 </div>
 
                 <div class="details-box quantity" id="quantity-item-box">
-                    {% if show_quantity %}
-                        <script>
-                            document.addEventListener('DOMContentLoaded', function() {
-                                document.querySelector('.details-box.default').style.visibility = 'hidden';
-                                document.querySelector('.details-box.addItem').style.visibility = 'hidden';
-                                document.querySelector('.details-box.quantity').style.visibility = 'visible';
-                            })
-                        </script>
-                    {% else %}
-                        <script>
-                            resetToDefault(); 
-                        </script>
-                    {% endif %}
-
-                <h3 class="boxTitle">{{ product.name }}</h3>
-                <div class="details">
-                    <h3>Product Code</h3>
-                    <h4>{{product.id}}</h4>
-                </div>
-                <div class="details">
-                    <h3>Category</h3>
-                    <h4>{{ product.category }}</h4>
-                </div>
-                <div class="details">
-                    <h3>Current Stock</h3>
-                    {% for message in messages %}
-                        {% if message.tags == 'info' %}
-                            <h4>{{ message }}</h4>
-                        {% endif %}
-                    {% endfor %}
-                </div>
-                
-                <form action="" method="post" id="quantity_form">
-                    {% csrf_token %}
-                    <div id="enterQuantity">
-                        <input type="hidden" name="item_code" value="{{ item_code }}">
-                        {{ quantity_form }}
+                    <h3 class="boxTitle">{{ product.name }}</h3>
+                    <div class="details">
+                        <h3>Product Code</h3>
+                        <h4>{{product.id}}</h4>
+                    </div>
+                    <div class="details">
+                        <h3>Category</h3>
+                        <h4>{{ product.category }}</h4>
+                    </div>
+                    <div class="details">
+                        <h3>Current Stock</h3>
+                        {% for message in messages %}
+                            {% if message.tags == 'info' %}
+                                <h4>{{ message }}</h4>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                 
-                    <div class="buttons confirm">
-                        <button type="button" class="close-product-box" id="close-quantity"><img src="{% static 'images/back-arrow.png' %}" alt="back-arrow" id="close-product"></button>
-                        <input type="submit" id="confirmBttn">
-                    </div>
-                </form>
-            </div>
-        </div> 
+                    <form action="" method="post" id="quantity_form">
+                        {% csrf_token %}
+                        <div id="enterQuantity">
+                            <input type="hidden" name="item_code" value="{{ item_code }}">
+                            {{ quantity_form }}
+                        </div>
+                    
+                        <div class="buttons confirm">
+                            <button type="button" class="close-product-box" id="close-quantity"><img src="{% static 'images/back-arrow.png' %}" alt="back-arrow" id="close-product"></button>
+                            <input type="submit" id="confirmBttn">
+                        </div>
+                    </form>
+                </div>
+            </div> 
 
         <button type="button" class="input-bttn code" id="enterCode">Enter Code</button>
         <button type="button" class="input-bttn manager" id="call-manager-button" onclick="call_manager()">Call Manager</button>
-    </div>
+        </div>
     
-    {% block cart %}{% endblock %}
+        {% block cart %}{% endblock %}
+    </body>
+    {% if show_quantity %}
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                document.querySelector('.details-box.default').style.visibility = 'hidden';
+                document.querySelector('.details-box.addItem').style.visibility = 'hidden';
+                document.querySelector('.details-box.quantity').style.visibility = 'visible';
+            })
+        </script>
+    {% else %}
+        <script>
+            resetDefault(); 
+        </script>
+    {% endif %}
 {% endblock %}
