--- a/ALLProject/users/templates/users/change_password.html
+++ b/ALLProject/users/templates/users/change_password.html
@@ -10,7 +10,8 @@
     </head>
     
     <body>
-        <div id="form-container">
+        <div class="box">
+            <div id="form-container" class="card">
             <div id="form-left">
                 <div id="password-change">
                     <h2>First-time Login</h2>
