--- a/ALLProject/static/css/password.css
+++ b/ALLProject/static/css/password.css
@@ -26,7 +26,19 @@
     #form-left {
         width: 56%;
         height: 100%;
-        aspect-ratio: 1/3;
+    }
+
+    #form-left {
+        width: 45%;
+        height: 90%;
+        align-content: center;
+        justify-items: anchor-center;
+        overflow: hidden;
+        
+        margin-left: 2.5%;
+        margin-top: 2.5%;
+        background-color: white;
+        border-radius: 20px;
     }
 
     #form-right {
