Added product select feature

--- a/ALLProject/inventory/templates/inventory/product_list.html
+++ b/ALLProject/inventory/templates/inventory/product_list.html
@@ -43,6 +43,7 @@
               <img src="{% static 'images/search 1.png' %}">
               <input type="text" id="text-search" oninput="filter_products()"></input>
             </form>
+            <button id="select-button" onclick="select_products()"><img src="{% static 'inventory/select.png' %}"></button>
           </div>
         </div>
         
