--- a/ALLProject/inventory/templates/inventory/product_delete.html
+++ b/ALLProject/inventory/templates/inventory/product_delete.html
@@ -1,8 +1,8 @@
 <div class="delete-container">
-    <h2>Delete {{product.name}}?</h2>
-    <p>Do you want to delete this product? <strong>Deleted products are permanently gone.</strong></p>
+    <h2>Delete {{delete_victim}}?</h2>
+    <p>Do you want to delete {{delete_victim}}? <strong>Deleted products are permanently gone.</strong></p>
     <div class="button-row">
-        <form method="POST" action="{% url 'product_delete' product.id%}">
+        <form method="POST" action="{{delete_link}}">
             {%csrf_token%}
             <button name="action" value="cancel">Cancel</button>
             <button id="delete-button" type="submit" name="action" value="confirm">Confirm</button>
