--- a/ALLProject/static/css/password.css
+++ b/ALLProject/static/css/password.css
@@ -27,6 +27,8 @@
         width: 56%;
         height: 100%;
         aspect-ratio: 1/3;
+        align-content: center;
+        justify-items: anchor-center;
     }
 
     #form-right {
