--- a/ALLProject/users/templates/partials/user_list_partial.html
+++ b/ALLProject/users/templates/partials/user_list_partial.html
@@ -4,7 +4,7 @@
             <div class="user role">
                 <h3> {{employee.role}} </h3>
             </div>
-            <div class="user username">
+            <div class="user username {%if not employee.active%} offline {%endif%}">
                 <h3> {{employee.user.first_name}} {{employee.user.last_name}}</h3>
             </div>
         </div>
