--- a/ALLProject/users/templates/users/home.html
+++ b/ALLProject/users/templates/users/home.html
@@ -52,7 +52,7 @@
                                 <p class="des">{{option.description}}</p>
                             </div>
                             <div class="button-bar">
-                                <button onclick="window.location.href='{{option.url}}'">Go</button> 
+                                <button onclick="window.location.href='{{option.url}}?has_pass=1'">Go</button> 
                             </div>
                         </div>
                     {% endfor %}
