--- a/ALLProject/users/templates/partials/user_delete.html
+++ b/ALLProject/users/templates/partials/user_delete.html
@@ -2,7 +2,7 @@
     <h2>Delete {{employee.user.username}}?</h2>
     <p>Do you want to delete this user? <strong>Deleted users are permanently gone.</strong></p>
     <div class="button-row">
-        <form method="POST" action="{% url 'user_delete' employee.id%}">
+        <form method="POST" action="{% url 'user_delete' employee.id%}?has_pass=1">
             {%csrf_token%}
             <button type="submit" name="action" value="cancel">Cancel</button>
             <button id="delete-button" type="submit" name="action" value="confirm">Confirm</button>
