Fix all stuff for presentation

--- a/ALLProject/users/templates/users/password_reset_complete.html
+++ b/ALLProject/users/templates/users/password_reset_complete.html
@@ -12,17 +12,105 @@
     </head>
     
     <body>
-        {% comment %} <div class="">
-            <div class="">
-                <div class="">
-                    <div class="">
-                        <div class="">
-                            Your password has been set. You may go ahead and <a href="{% url 'user_login' %}">Login Here</a>
+        <div class="box">
+            <div id="form-container" class="card">
+                <div id="form-left">
+                    <div class="fail">
+                        <img src="{%static 'images/green-checkmark.png'%}">
+                        <h3>
+                         Your password has been set. You may go ahead and login now.
+                        </h3>
+
+                        <div id="extra">
+                            <div></div><a href="{% url 'user_login'%}">Back to login</a><div></div>
                         </div>
                     </div>
                 </div>
+                <div id="form-right">
+                    <div id="logo-box">
+                        <img src="{% static 'images/warehub-logo.png'%}" alt="Warehub logo" id="warehub-logo">
+                    </div>
+                    <h1 id="welcome">Welcome Back To WareHub!</h1>
+                </div>
             </div>
-        </div> {% endcomment %}
+        </div>
 
+        <script>
+        const cards = document.querySelectorAll(".card");
+        const wrapper = document.querySelector(".box");
+
+        wrapper.addEventListener("mousemove", function (event) {
+            cards.forEach((card) => {
+            const rect = card.getBoundingClientRect();
+            const x = event.clientX - rect.left;
+            const y = event.clientY - rect.top;
+
+            card.style.background = `radial-gradient(900px circle at ${x}px ${y}px, #FFE9C94D, transparent 15%)`;
+            });
+        });
+        </script>
+
+        {% if messages %}
+        <style>
+            #messages-container {
+                width: 20vw;
+                height: fit-content;
+                position: fixed;
+                z-index: 5;
+                right: 0%;
+                top: 0%;
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                flex-direction: column;
+                padding-top: 5vh;
+            }
+
+            .message {
+                width: 90%;
+                aspect-ratio: 4/1;
+                background-color: #FFF7EB;
+                border-radius: 1vw;
+                box-shadow: 4px 2px 4px gray;
+                display: flex;
+                align-items: center;
+                padding-left: 1vw;
+                animation: cssAnimation 0s 3s forwards;
+                visibility: visible;
+            }
+
+            @keyframes cssAnimation {
+            to   { visibility: hidden; }
+            }
+
+            .success{
+                color: green;
+            }
+
+            .message img {
+                width: 2vw;
+            }
+
+            .message-text {
+                margin-left: 5%;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-weight: 300;
+                font-style: normal;
+                font-size: 1.2vw;
+            }
+        </style>
+
+        <div id="messages-container">
+        {% for message in messages %}
+            <div class="message">
+                <img {%if 'success' in message.tags%} src="{% static 'images/green-checkmark.png' %}" 
+                {%else%} src="{% static 'images/exclamation.png' %}"  {%endif%}
+                alt="green checkmark"></img>
+                
+                <p class="message-text">{{message}}</p>
+            </div>
+        {% endfor %}
+        </div>
+        {%endif%}
     </body>
 </html>
