--- a/ALLProject/users/templates/users/password_reset_confirm.html
+++ b/ALLProject/users/templates/users/password_reset_confirm.html
@@ -51,7 +51,7 @@
                         </h3>
 
                         <div id="extra">
-                            <a href="{% url 'user_login'%}">Back to login</a>
+                            <div></div><a href="{% url 'user_login'%}">Back to login</a><div></div>
                         </div>
                     </div>
                     {% endif %}
