--- a/ALLProject/reports/templates/reports/partials/best_product.html
+++ b/ALLProject/reports/templates/reports/partials/best_product.html
@@ -5,7 +5,7 @@
     <div class="container product">
         <div id="best-product">
             <h2 class="boxTitle">Best Selling Product (Monthly)</h2>
-            <form action="" method="post" id="product_report">
+            <form action="" method="post" id="product_report" style="margin:0;">
                 {% csrf_token %}
                 {{product_report}}
                 <button type="submit" class="prints best-product"> Print </button>
