--- a/ALLProject/reports/templates/reports/partials/sales_transactions.html
+++ b/ALLProject/reports/templates/reports/partials/sales_transactions.html
@@ -40,7 +40,7 @@
                 <tbody class="transac-table">
                     {% if transacts %}
                         {% for items in transacts %}
-                            <tr style="height:10%;">
+                            <tr style="height:5vh;">
                                 <td>{{items.id}}</td>
                                 <td>{{items.employeeID_id__user_id__username}}</td>
                                 <td>{{items.payment_method}}</td>
