--- a/ALLProject/reports/static/css/sales_transactions.css
+++ b/ALLProject/reports/static/css/sales_transactions.css
@@ -4,17 +4,22 @@
     left: 47%;
 
     width: 49%;
-    height: 72%;
+    height: 78%;
     background-color: rgb(255, 255, 245);
     border-radius: 20px;
     overflow: hidden;
 }
 
 #transac-details {
-    width: 95%;
+    width: 97%;
     height: calc(80% - 6vh);
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    margin-left: 1.5%;
+    margin-right: 0.5%;
+    padding-right: 1.5%;
+    overflow-y: hidden;
+}
+#transac-details:hover {
+    overflow-y: scroll;
 }
 
 .transac-switch {
@@ -22,7 +27,7 @@
     top: 0;
     right: 0;
     width: 20%;
-    height: 10%;
+    height: 8%;
     border-style: none;
     background-color: #CDE7A1;
 
@@ -45,7 +50,7 @@
     width: fit-content;
     justify-self: end;
     right: 0;
-    top: 55%;
+    top: 50%;
     padding-right: 5%;
 }
 .periods.monthly {    
@@ -53,7 +58,7 @@
     color: #000;
     font-size: 1.7vw;
     justify-self: anchor-center;
-    padding-right: 35%;
+    padding-right: 20%;
 }
 
 .periods.changed-monthly {
@@ -75,7 +80,7 @@
     color: #000;
     font-size: 1.7vw;
     justify-self: anchor-center;
-    padding-right: 55%;
+    padding-right: 35%;
 }
 
 table.transac-table {
@@ -83,6 +88,10 @@ table.transac-table {
     height: 100%;
     overflow: hidden;
     text-align: center;
+    
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 tbody.transac-table {
@@ -92,7 +101,7 @@ tbody.transac-table {
 #transac-total-box {
     position: absolute;
     display: flex;
-    bottom: 8vh;
+    bottom: 7vh;
     width: 100%;
     height: 40px;
     justify-content: space-between;
