Added validation for user form

--- a/ALLProject/pos/templates/pos/view_history.html
+++ b/ALLProject/pos/templates/pos/view_history.html
@@ -39,11 +39,8 @@
                 </div>
               
                 <div class="filter-payment-box">
-                    <button type="button" onclick="filter_payment('Credit Card')">Credit Card</button>
-                    <button type="button" onclick="filter_payment('Debit Card')">Debit Card</button>
-                    <button type="button" onclick="filter_payment('DuitNow')">DuitNow</button>
+                    <button type="button" onclick="filter_payment('Card')">Card</button>
                     <button type="button" onclick="filter_payment('Cash')">Cash</button>
-                    <button type="button" onclick="filter_payment('Others')">Others</button>
                 </div>
             </div>
         </div>
