--- a/ALLProject/users/templates/users/change_password.html
+++ b/ALLProject/users/templates/users/change_password.html
@@ -29,7 +29,7 @@
 
                         {% if form.errors %}
                             <div class="alert" role="alert">
-                                <div id="form_errors">
+                                <div>
                                     {% for key, value in form.errors.items %}
                                         <strong>{{ value }}</strong>
                                     {% endfor %}
@@ -43,7 +43,11 @@
             </div>
 
             <div id="form-right">
-                {% comment %} <img src="" alt="inventory-checking.png">  {% endcomment %}
+                <div id="logo-box">
+                        <img src="{% static 'images/warehub-logo.png'%}" alt="Warehub logo" id="warehub-logo">
+                    </div>
+                    <h1 id="welcome">Welcome To WareHub!</h1>
+                </div>
             </div>
         </div>
 
