fixed sales history

--- a/ALLProject/pos/templates/pos/view_history.html
+++ b/ALLProject/pos/templates/pos/view_history.html
@@ -39,7 +39,7 @@
                 </div>
               
                 <div class="filter-payment-box">
-                    <button type="button" onclick="filter_payment('Card')">Card</button>
+                    <button type="button" onclick="filter_payment('Debit/Credit Card')">Card</button>
                     <button type="button" onclick="filter_payment('Cash')">Cash</button>
                 </div>
             </div>
