--- a/ALLProject/inventory/templates/inventory/product_list.html
+++ b/ALLProject/inventory/templates/inventory/product_list.html
@@ -47,7 +47,7 @@
           </div>
         </div>
         
-        <div id="product-list-container">
+        <div id="product-list-container" style="width: 100%;">
           {% include 'partials/product_list_partial.html'%}
         </div>
 
