--- a/ALLProject/static/css/product_restock.css
+++ b/ALLProject/static/css/product_restock.css
@@ -12,6 +12,7 @@ body, html {
 h1,h3 {
     margin-top: 1%;
     margin-bottom: 1%;
+    text-align: left;
 }
 
 #return {
@@ -155,6 +156,7 @@ h1,h3 {
     width: 100%;
     margin-top: 4%;
     place-items: center;
+    text-align: center;
 }
 
 .form-label-box {
@@ -202,7 +204,6 @@ input:focus {
 #updateBttn {
     width: 25vh;
     height: 7vh;
-    margin-top: 8%;
 
     background-color: #CDE7A1;
     border-radius: 20px;
